@@ -11663,7 +11663,8 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
           <para>- Improved validation for XPath tool agent</para>
 
           <para>- Introduced SharkDisplayGenerator to differently present
-          package name in GUI</para>
+          package and workflow process name in GUI (category variable value
+          information is appended)</para>
         </listitem>
 
         <listitem>
